<resources>
    <string name="app_name">SA Gym</string>
    <string name="facebook_app_id">2741786625855540</string>
    <string name="fb_login_protocol_scheme">fb2741786625855540</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_list_user">User List</string>
    <string name="sign_out">SignOut</string>
    <string name="reminder">reminder</string>
    <string name="map">map</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="content_description">Application Image</string>
    <string name="send_email">Send Email</string>
    <string name="login_fail">Login Failed! Please Try Again Later</string>
    <string name="login_success">Login Successful!</string>
    <string name="insert_email_first">Insert Email First</string>
    <string name="insert_password_first">Insert Password First</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="total_members">Total Members</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="contact_number">Contact Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="membership_type">Membership Type</string>
    <string name="amount">Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="added_by">Added By</string>
    <string name="filter_by">Filter By :</string>
    <string name="name">Name</string>
    <string name="due">Due</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="need_internet">You need internet connection for this app. Please turn on mobile network or Wi-Fi in
        Settings.
    </string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="unable_to_connect">Unable to Connect</string>
    <string name="back">Back</string>
    <string name="due_paid">Due Paid</string>
    <string name="due_pending">Due Pending</string>
    <string name="zero">0</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="reminder_set_successfully">Reminder Set Successfully</string>
    <string name="failed_to_set_reminder">Failed to set Reminder</string>
    <string name="really_want_to_signout">Really Want to Sign-Out ?</string>
    <string name="yes">Yes</string>
    <string name="default_web_client_id">278195569465-ki6t45flus1jek64hvj6ivafpu78n8ai.apps.googleusercontent.com
    </string>
    <string name="update_password">Update Password</string>
    <string name="email_not_exist_or_failed_to_send">Email not exist or Failed to send</string>
    <string name="check_your_email_to_reset_your_password">Check Email to Reset Your Password!</string>
    <string name="insert_all_the_data_first">Insert All The Data First</string>
    <string name="date_picker_dialog_box">Date Picker Dialog Box</string>
    <string name="time_picker_dialog_box">Time Picker Dialog Box</string>
    <string name="insert_email_properly">Insert Email Properly</string>
    <string name="verification_email_sent_to">Verification Email Sent to</string>
    <string name="failed_to_send_verification_email">Failed to Send Verification Email.</string>
    <string name="password_reset_success">Password Reset Success!</string>
    <string name="fail_to_reset_password">Fail to Reset Password!</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="search_name">Search Name</string>

    <string-array name="filter">
        <item>ALL</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="membership_type">
        <item>yearly</item>
        <item>monthly</item>
        <item>quarterly</item>
        <item>half-yearly</item>
    </string-array>

</resources>
