<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context=".view.AddUserSecondFormFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_8"
                    android:layout_marginTop="@dimen/small_8"
                    android:layout_marginEnd="@dimen/very_small_4"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="@dimen/elevation_small_5"
                    app:boxCornerRadiusBottomStart="@dimen/elevation_small_5"
                    app:boxCornerRadiusTopEnd="@dimen/elevation_small_5"
                    app:boxCornerRadiusTopStart="@dimen/elevation_small_5"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/small_8"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:minLines="1"
                        android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/very_small_4"
                    android:layout_marginTop="@dimen/small_8"
                    android:layout_marginEnd="@dimen/small_8"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="@dimen/elevation_small_5"
                    app:boxCornerRadiusBottomStart="@dimen/elevation_small_5"
                    app:boxCornerRadiusTopEnd="@dimen/elevation_small_5"
                    app:boxCornerRadiusTopStart="@dimen/elevation_small_5"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/small_8"
                        android:hint="@string/height"
                        android:inputType="numberSigned"
                        android:maxLines="1"
                        android:minLines="1"
                        android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_membership_type"
                style="@android:style/Widget.Material.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_8"
                android:layout_marginTop="@dimen/medium_16"
                android:layout_marginEnd="@dimen/small_8"
                android:layout_marginBottom="@dimen/elevation_small_5"
                android:entries="@array/membership_type"
                android:layoutMode="opticalBounds"
                android:overScrollMode="ifContentScrolls"
                android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_8"
                android:layout_marginTop="@dimen/small_8"
                android:layout_marginEnd="@dimen/small_8"
                app:boxCornerRadiusBottomEnd="@dimen/elevation_small_5"
                app:boxCornerRadiusBottomStart="@dimen/elevation_small_5"
                app:boxCornerRadiusTopEnd="@dimen/elevation_small_5"
                app:boxCornerRadiusTopStart="@dimen/elevation_small_5"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/small_8"
                    android:hint="@string/amount"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minLines="1"
                    android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_8"
                android:layout_marginTop="@dimen/small_8"
                android:layout_marginEnd="@dimen/small_8">

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/very_small_4"
                    android:layout_weight="1"
                    android:switchPadding="@dimen/extra_large_40"
                    android:text="@string/payment_status" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/very_small_4"
                    android:layout_weight="2"
                    android:text="@string/active" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_8"
                android:layout_marginTop="@dimen/small_8"
                android:layout_marginEnd="@dimen/small_8"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:boxCornerRadiusBottomEnd="@dimen/elevation_small_5"
                app:boxCornerRadiusBottomStart="@dimen/elevation_small_5"
                app:boxCornerRadiusTopEnd="@dimen/elevation_small_5"
                app:boxCornerRadiusTopStart="@dimen/elevation_small_5"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_added_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawablePadding="@dimen/small_8"
                    android:filterTouchesWhenObscured="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/added_by"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:minLines="1"
                    android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium_16"
                android:layout_marginBottom="@dimen/small_8"
                android:gravity="center"
                android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_8"
                    android:layout_marginBottom="@dimen/small_8"
                    android:text="@string/back"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_8"
                    android:layout_marginTop="@dimen/small_8"
                    android:layout_marginEnd="@dimen/small_8"
                    android:layout_marginBottom="@dimen/small_8"
                    android:text="@string/add"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button_back"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>