<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:src="@mipmap/ic_launcher_foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_signup"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/content_description" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/emailSignupTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView_signup">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email_signup"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:minLines="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/username"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/passwordSignupTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxStrokeWidth="2dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/emailSignupTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_signup"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:minLines="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:drawablePadding="8dp"
                    app:passwordToggleEnabled="true"
                    android:drawableStart="@drawable/password"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                app:rippleColor="@android:color/holo_orange_light"
                android:shadowColor="@color/design_default_color_secondary"
                app:elevation="3dp"
                android:textStyle="bold"
                app:strokeColor="@android:color/white"
                app:strokeWidth="1dp"
                app:cornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@id/passwordSignupTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>